[package]
name = "gloom-rs"
version = "0.3.0"
authors = [
    "Peder b. Sundt <pbsds@hotmail.com>",
    "Michael H. Gimle <michael.gimle@gmail.com>",
]
edition = "2018" # rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
tobj = "3.1.0"
image = "0.24.3"
nalgebra-glm = "0.17.0"
rand = "0.8.4"
